# test-crawler

./: README.md  pyproject.toml
crawl/crawl/: settings.py
crawl/crawl/spiders/: lifeomic_spider.py
