[tool.poetry]
name = "test-crawl"
version = "0.1.0"
description = ""
authors = ["monomonedula <valh@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
